** 提供AI 工程里额外能力，如意图识别，输出内容管控、会话历史、会话分析等
* ext-config
** 提供动态配置管理功能
* ext-moments
** 提供社交功能模块
** 动态、文章、评论、点赞、朋友圈、通知等

== 1.0（规划中）

=== 🐞 BugFix 问题修复

* 修复操作日志中，在引入 `Hutool` 并使用 `userAgent` 时，操作日志的扩展字段的 `UserAgent` 内容未打印完全问题。
* 修复 `DefaultTenantFilter` 默认租户名带引号问题。

=== 🛠️ Refactor 优化

* Core
** 优化日期类型转换性能，增加更多支持格式。
** 优化 Threads 工具类性能，降低内存占用和不必要的线程唤醒，保持方法不变前提下删除 Delay 系列类。

* WEB 模块
** 提供操作日志查询

* crypto
** 支持配置关闭公钥查询接口、修改接口地址
** 传输加解密（密钥协商）配置格式优化，支持配置可协商的加密算法

* operation-log
** OpLogContextHolder 方法名调整 closeAutoLog -> disableAutoLog
** 可通过配置 logger.type=none 关闭日志打印，但保留操作日志其他功能。

* batch
** 调整 record 默认字段名 `index` -> `indexNo`

* api-doc
** 提供开箱即用的接口说明

* 其他
** 对关键模块（Core、Crypto、Negotiation）单测覆盖。
** 补充源码注释、降低 warn。
** 调整部分功能默认实现类命名，`HashMapXXX` -> `MemoryXXX`

❌ Compatibility 非兼容变化

[NOTE]
====
* 密钥协商相关配置前缀变化 `shoulder.crypto.transport` -> `shoulder.crypto.negotiation`
====

=== 📚️ Dependence 依赖变化

== 0.8.1（2024-6-17）

> 小的依赖版本调整

* shoulder-dependencies 升级依赖
** `spring-boot` 3.2.4 -> 3.2.6
** `mybatis-plus` 3.5.5 -> 3.5.6
** `commons-io`   2.16.0 -> 2.16.1
** `shoulder-maven-plugin`   1.2.1 -> 1.2.2
* autoconfiguration
** 添加提示项
* shoulder-archetype-simple 优化
** 去除不需要的 import
** readme.md 介绍文件内容优化
** 去除多余的配置文件内容
** 源码目录添加 `model`

== 0.8 （2024-4-24）【升级 spring boot3.2, JDK 17】

> 升级并支持 spring-boot3（并将相关生态升级，如 jdk、spring-cloud、spring security6、swaggerv3/OPEN-APIv2等）

* core
** 升级 jdk17
** concurrent 引入双buffer缓存通用工具类 DoubleBufferCache，便于更简单的实现该高性能算法。
** 提供增强的 ConversionService，支持集合、更多的类转换，比如日期解析时支持多种格式，Jdk8的各类时间互转
** Translator 增加支持默认message方法
** 新增字典定义
** 新增日志配置，提供默认 logger
** 基础错误码新增
** 多线程工具优化，能力增强
** fix 修正错误的拼写
* db
** 扩展的 bizId、version、逻辑删除等 模板Entity进入可用状态，现在可以继承这些模板类减少bizId 相关DB操作代码的编写了（0.6 引入并开始孵化）
* operation-log
** detailKey 改为 detailI18nKey，db 中 detail_key 改为 detail_i18n_key
** detailItems 改为 detailI18nItems，db 中 detail_item 改为 detail_i18n_values
* web
** 模板类进入可用状态（0.6 引入并开始孵化）