@@ -16,7 +16,7 @@
         $(document).ready(function () {
             function queryAllDictionary() {
                 $.ajax({
-                    url: host + '/api/v1/dictionary/type/all',
+                    url: host + '##DICTIONARY_API_PATH##/type/all',
                     method: 'GET',
                     success: function (response) {
                         if (response.code == '0') {
@@ -36,7 +36,7 @@
             // 查询单个字典项的函数
             function querySingleDictionaryItems(dictionaryType) {
                 $.ajax({
-                    url: host + '/api/v1/dictionary/item/listByType/' + dictionaryType,
+                    url: host + '##DICTIONARY_API_PATH##/listByType/' + dictionaryType,
                     method: 'GET',
                     success: function (response) {
                         if (response.code == '0') {
