@@ -18,6 +18,7 @@
 
     <properties>
         <java.version>17</java.version>
+        <spring-boot.version>3.2.12</spring-boot.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -119,6 +120,11 @@
         <!-- plugin management 以下插件子模块自动继承，不必引入 -->
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>${spring-boot.version}</version>
+                </plugin>
 
                 <!-- shoulder 开发的错误码插件 -->
                 <plugin>
